--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "engines": {
     "node": "16.8.0"
@@ -17,9 +18,34 @@
     "@discordjs/voice": "^0.6.0",
     "@distube/soundcloud": "^0.2.2",
     "@distube/spotify": "^0.6.3",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@iamtraction/google-translate": "^1.1.2",
+    "canvacord": "^5.2.3",
+    "discord-image-generation": "^1.4.9",
     "discord-player": "^5.1.0",
     "discord.js": "^13.1.0",
-    "libsodium-wrappers": "^0.7.9"
+    "express": "^4.17.1",
+    "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.4.0",
+    "libsodium-wrappers": "^0.7.9",
+    "moment": "^2.29.1",
+    "mongoose": "^6.0.12",
+    "node-fetch": "^3.0.0-beta.9",
+    "quick.db": "^7.1.3",
+    "redis": "^3.1.2",
+    "rtp-ogg-opus": "^1.0.12",
+    "urban-dictionary": "^3.0.2"
   },
+  "devDependencies": {
+    "node": "^16.13.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Hardcodex1/musicbot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Hardcodex1/musicbot/issues"
+  },
+  "homepage": "https://github.com/Hardcodex1/musicbot#readme",
   "description": ""
 }
